force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/HRCFSL_Inspection_Template_Step__c.object-meta.xml
<CustomObject>
    <label>Inspection Template Step</label>
    <nameField>
        <label>Inspection Template Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Template Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>