force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/fields/Display_Only__c.field-meta.xml
<CustomField>
    <fullName>Display_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Only</label>
    <type>Checkbox</type>
</CustomField>