force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/fields/HRCFSL_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>