force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/fields/HRCFSL_Lower_Range__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Lower_Range__c</fullName>
    <description>The lower range of acceptable values for this step&apos;s input. Applicable for record type range.</description>
    <label>Lower Range</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>