force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/fields/HRCFSL_Required__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this field required?</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>