force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/fields/HRCFSL_Sequence__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>