force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/fields/HRCFSL_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Short_Description__c</fullName>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>