force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/fields/HRCFSL_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>