force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/recordTypes/HRCFSL_Boolean.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Boolean</fullName>
    <active>true</active>
    <label>Boolean</label>
</RecordType>