force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/recordTypes/HRCFSL_Display.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Display</fullName>
    <active>true</active>
    <description>Displays text to the user. Does not capture any input.</description>
    <label>Display</label>
</RecordType>