force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/recordTypes/HRCFSL_Range.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Range</fullName>
    <active>true</active>
    <description>Captures a number within a range of acceptable values.</description>
    <label>Range</label>
</RecordType>