force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/recordTypes/HRCFSL_Text.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Text</fullName>
    <active>true</active>
    <label>Text</label>
</RecordType>