force-app/main/default/objects/HRCFSL_Inspection_Template_Step__c/validationRules/Step_Name_too_long.validationRule-meta.xml
<ValidationRule>
    <fullName>Step_Name_too_long</fullName>
    <active>true</active>
    <description>JDE can accept up to 30 characters</description>
    <errorConditionFormula>LEN( Name ) &gt; 30</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Inspection Step Name cannot be longer than 30 characters</errorMessage>
</ValidationRule>